tenzir/integration/data/reference/pipelines_local/test_chart_arguments/step_00.ref
error: unknown option `x`
 --> <input>:1:34
  |
1 | from stdin read json | chart pie x=b
  |                                  ^ 
  |
  = usage: chart pie [name=<field>] [value=<field>]
  = docs: https://docs.tenzir/operators/chart